Added team creation and team picker for ruggers

--- a/BlazorApp2/Server/BlazorApp2.Server.csproj
+++ b/BlazorApp2/Server/BlazorApp2.Server.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>8d5ff951-4b48-4458-9ce9-2c4bb4208b01</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
