added loading on index, changed development appsettings for connectionstring override, cleaned up populate cities sql

--- a/BlazorApp2/Server/appsettings.Development.json
+++ b/BlazorApp2/Server/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "MessagingDatabase": "Server=localhost\\instance1;Database=Messaging;Trusted_Connection=True;Application Name=Ruggr;"
   }
 }
