--- a/BlazorApp2/Client/BlazorApp2.Client.csproj
+++ b/BlazorApp2/Client/BlazorApp2.Client.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="AspNetMonsters.Blazor.Geolocation" Version="0.5.0-preview1" />
+    <PackageReference Include="Blazored.LocalStorage" Version="3.0.0" />
     <PackageReference Include="Blazored.SessionStorage" Version="1.0.12" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="5.0.0" />
