fix issue with player not being in a team

--- a/BlazorApp2/Server/appsettings.json
+++ b/BlazorApp2/Server/appsettings.json
@@ -8,7 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MessagingDatabase": "Server=absoluteunit;Database=Messaging;Trusted_Connection=True;Application Name=Ruggr;"
+    "MessagingDatabase": "Server=localhost\\instance2019;Database=Messaging;Trusted_Connection=True;Application Name=Ruggr;"
   }
-
+  
 }
+
