--- a/BlazorApp2/Client/wwwroot/manifest.json
+++ b/BlazorApp2/Client/wwwroot/manifest.json
@@ -1,15 +1,15 @@
 {
-  "name": "Find-A-Ruggr",
-  "short_name": "Ruggr",
+  "name": "Ruckr",
+  "short_name": "Ruckr",
   "start_url": "./",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#03173d",
   "icons": [
     {
+      "sizes": "512x512",
       "src": "icon-512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "type": "image/png"
     }
   ]
 }
