--- a/BlazorApp2/Client/wwwroot/manifest.json
+++ b/BlazorApp2/Client/wwwroot/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Find-A-Ruggr",
-  "short_name": "Ruggr",
+  "name": "RuckrFun",
+  "short_name": "Ruckr",
   "start_url": "./",
   "display": "standalone",
   "background_color": "#ffffff",
