--- a/BlazorApp2/Client/BlazorApp2.Client.csproj
+++ b/BlazorApp2/Client/BlazorApp2.Client.csproj
@@ -33,6 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\videos\" />
     <Folder Include="wwwroot\Pics\" />
   </ItemGroup>
 
